# yrsn-iars

./: README.md  pyproject.toml
docs/: AWS_DEPLOYMENT_GUIDE.md  GCP_DEPLOYMENT_GUIDE.md  INFRASTRUCTURE_DIAGRAMS.md
notebooks/: 01_cleanlab_for_approval_data.ipynb  02_text_classification_quality.ipynb  03_multi_annotator_consensus.ipynb  04_rag_retrieval_quality.ipynb  05_token_ner_quality.ipynb  06_production_pipeline.ipynb
specs/: CODE_REVIEW_AND_FIXES.md  IARS_APPROVAL_ROUTING.md  IARS_MASTER_SPEC.md  NOTEBOOK_USE_CASE_MATRIX.md  TEMPERATURE_QUALITY_DUALITY.md
src/yrsn_iars/: __init__.py
src/yrsn_iars/adapters/: __init__.py  cleanlab_adapter.py  temperature.py
src/yrsn_iars/pipelines/: __init__.py  approval_router.py
